<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopr</string>
    <string name="action_settings">Settings</string>
    <string name="title_list">Items</string>
    <string name="title_map">Shops</string>
    <string name="reason_empty">Close to you, store open</string>
    <string name="like">I like something about this item</string>
    <string name="dislike">I dislike something this item</string>
    <string name="description_item_picutre">Clothing item</string>
    <string name="title_activity_critique">CritiqueActivity</string>
    <string name="detail_like">What do you like about \"%s\" and want to see more of?</string>
    <string name="detail_dislike">What do you not like about \"%s\" and want to see less of?</string>
    <string name="update_recommendations">Update recommendations</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="label">Label</string>
    <string name="type">Type</string>
    <string name="sex">Sex</string>
    <string name="action_restart">Start over</string>
    <string name="getting_your_location">Getting your location…</string>
    <string name="has_x_recommendations">carries %s recommended items</string>
    <string name="title_activity_importer">ImporterActivity</string>
    <string name="import_items">Import items</string>
    <string name="import_shops">Import shops</string>
    <string name="import_no_file_manager">Importing requires a file manager to be installed.</string>
    <string name="import_a_csv_file">Import a CSV file</string>
    <string name="action_import">Import data</string>
    <string name="import_start">Importing…</string>
    <string name="import_successful">Import successful.</string>
    <string name="import_failed">Import failed.</string>
    <string name="last_critique">Last critique</string>
    <string name="use_fake_location">Use fake location</string>
    <string name="diversity_on_negative_progress">Diversity on negative progress</string>
    <string name="no_item_dropping">Also no recs exclusion</string>
    <string name="title_activity_test_setup">Test Setup</string>
    <string name="test_setup">Test Setup</string>
    <string name="start">Start</string>
    <string name="your_name_or_pseudonym">Your name or pseudonym</string>
    <string name="title_activity_results">Test Results</string>
    <string name="hello_world">Hello world!</string>
    <string name="thank_you_this_task_is_finished_">Thank you, this task is finished!</string>
    <string name="no_data">no data</string>
    <string name="task_type">Task type</string>
    <string name="duration">Duration</string>
    <string name="cycle_count">Cycle count</string>
    <string name="title_activity_item_details">Item Details</string>
    <string name="choice_confirmation">Are you happy with \"%s\"?</string>
    <string name="choice_instructions">If not, press back.</string>
    <string name="choice_finish">Select this and finish</string>
    <string name="your_selected_item">Your selected item</string>
    <string name="swim_suit">Swim suit</string>
    <string name="trunks">Trunks</string>
    <string name="blouse">Blouse</string>
    <string name="shirt">Shirt</string>
    <string name="trousers">Trousers</string>
    <string name="jeans">Jeans</string>
    <string name="dress">Dress</string>
    <string name="poloshirt">Poloshirt</string>
    <string name="sweater">Sweater</string>
    <string name="skirt">Skirt</string>
    <string name="shorts">Shorts</string>
    <string name="cardigan">Cardigan</string>
    <string name="top_t_shirt">Top/T-Shirt</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unisex">Unisex</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="yellow">Yellow</string>
    <string name="brown">Brown</string>
    <string name="colored">Colored</string>
    <string name="mixed">Mixed</string>
    <string name="grey">Grey</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="black">Black</string>
    <string name="turquoise">Turquoise</string>
    <string name="white">White</string>
    <string name="beige">Beige</string>
    <string name="less_than_25">less than 25 €</string>
    <string name="_25_to_50">25 to 50 €</string>
    <string name="_50_to_75">50 to 75 €</string>
    <string name="_75_to_100">75 to 100 €</string>
    <string name="_100_to_150">100 to 150 €</string>
    <string name="_150_to_200">150 to 200 €</string>
    <string name="_200_or_more">200 € or more</string>
    
    <string name="only">only %s</string>
    <string name="preferably">preferably %s</string>
    <string name="avoid">avoid %s</string>
    <string name="restart_test">Restart test</string>
    <string name="selection_hint">Select one or more</string>

</resources>