<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.ResultsActivity" >

        <TextView
            android:id="@+id/textViewResultsFinished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/thank_you_this_task_is_finished_"
            android:textAppearance="@style/TextAppearance.Large.Light" />

        <TextView
            android:id="@+id/textViewResultsUsernameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name_or_pseudonym"
            android:textAppearance="@style/TextAppearance.Small.Label" />

        <TextView
            android:id="@+id/textViewResultsUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.Light" />

        <TextView
            android:id="@+id/textViewResultsTaskTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_type"
            android:textAppearance="@style/TextAppearance.Small.Label" />

        <TextView
            android:id="@+id/textViewResultsTaskType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.Light" />

        <TextView
            android:id="@+id/textViewResultsDurationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textAppearance="@style/TextAppearance.Small.Label" />

        <TextView
            android:id="@+id/textViewResultsDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.Light" />

        <TextView
            android:id="@+id/textViewResultsCyclesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cycle_count"
            android:textAppearance="@style/TextAppearance.Small.Label" />

        <TextView
            android:id="@+id/textViewResultsCycles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.Light" />

        <TextView
            android:id="@+id/textViewResultsItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_selected_item"
            android:textAppearance="@style/TextAppearance.Small.Label" />

        <TextView
            android:id="@+id/textViewResultsItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.Light" />

        <ImageView
            android:id="@+id/imageViewResultsItemPicture"
            android:layout_width="150dp"
            android:layout_height="200dp" />
    </LinearLayout>

</ScrollView>