<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ItemDetailsActivity" >

    <TextView
        android:id="@+id/textViewItemDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_confirmation"
        android:textAppearance="@style/TextAppearance.Large.Light" />

    <TextView
        android:id="@+id/textViewItemDetailsSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewItemDetailsTitle"
        android:text="@string/choice_instructions"
        android:textAppearance="@style/TextAppearance" />

    <ImageView
        android:id="@+id/imageViewItemDetails"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewItemDetailsSubtitle"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/armani" />

    <TextView
        android:id="@+id/textViewItemDetailsAttributes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewItemDetailsSubtitle"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/imageViewItemDetails"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/no_data"
        android:textAppearance="@style/TextAppearance.Light" />

    <Button
        android:id="@+id/buttonItemDetailsFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewItemDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/choice_finish" />

</RelativeLayout>